ui: prevent cart quantity label wrap

--- a/src/index.css
+++ b/src/index.css
@@ -3239,6 +3239,7 @@ img {
 
 .cart-item__qty > span:first-child {
   align-self: center;
+  white-space: nowrap;
 }
 
 .cart-item__qty .qty-value {
